--- a/ic-os/components/misc/guestos/ic-node.conf
+++ b/ic-os/components/misc/guestos/ic-node.conf
@@ -13,5 +13,6 @@ d      /run/ic-node/nftables-ruleset               0775 root ic-replica         
 f      /run/ic-node/nftables-ruleset/nftables.conf 0664 root ic-replica          -
 d      /run/ic-node/etc/node_exporter              0755 root root                -
 d      /run/ic-node/etc/filebeat                   0755 root root                -
+d      /run/ic-node/etc/vector                     0775 root vector              -
 d      /run/ic-node/config                         0755 root root                -
 d      /run/node_exporter/collector_textfile       0755 root root                -
