--- a/ic-os/components/misc/hostos/ic-node.conf
+++ b/ic-os/components/misc/hostos/ic-node.conf
@@ -9,6 +9,7 @@ d      /run/ic-node/root/                          0700 root root       -
 d      /run/ic-node/root/.ssh                      0700 root root       -
 d      /run/ic-node/etc/ssh                        0755 root root       -
 d      /run/ic-node/etc/node_exporter              0755 root root       -
+d      /run/ic-node/etc/vector                     0775 root vector     -
 d      /run/ic-node/config                         0755 root root       -
 d      /run/node_exporter/collector_textfile       0755 root root       -
 d      /run/libvirt                                0755 root root       -
