--- a/rs/sns/governance/token_valuation/Cargo.toml
+++ b/rs/sns/governance/token_valuation/Cargo.toml
@@ -11,12 +11,14 @@ futures = { workspace = true }
 ic-base-types = { path = "../../../types/base_types" }
 ic-cdk = { workspace = true }
 ic-nervous-system-common = { path = "../../../nervous_system/common" }
+ic-nervous-system-initial-supply = { path = "../../../nervous_system/initial_supply" }
 ic-nervous-system-runtime = { path = "../../../nervous_system/runtime" }
 ic-nervous-system-string = { path = "../../../nervous_system/string" }
 ic-nns-constants = { path = "../../../nns/constants" }
 ic-sns-swap-proto-library = { path = "../../../sns/swap/proto_library" }
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
 mockall = { workspace = true }
+num-traits = { workspace = true }
 rust_decimal = "1.25"
 
 [dev-dependencies]
