--- a/ic-os/components/networking/generate-network-config/guestos/generate-network-config.service
+++ b/ic-os/components/networking/generate-network-config/guestos/generate-network-config.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Generate network config
 After=bootstrap-ic-node.service
+Requires=bootstrap-ic-node.service
 Before=systemd-networkd.service
 
 [Install]
