--- a/rs/nns/governance/BUILD.bazel
+++ b/rs/nns/governance/BUILD.bazel
@@ -69,8 +69,10 @@ BASE_DEPENDENCIES = [
 ] + select({
     "@rules_rust//rust/platform:wasm32-unknown-unknown": [],
     "//conditions:default": [
-        "@crate_index//:csv",
+        # Keep sorted.
         "//rs/nervous_system/common/test_keys",
+        "@crate_index//:csv",
+        "@crate_index//:futures",
     ],
 })
 
@@ -115,7 +117,6 @@ DEV_DEPENDENCIES = [
     "//rs/sns/swap/protobuf_generator:lib",
     "//rs/test_utilities/compare_dirs",
     "@crate_index//:candid_parser",
-    "@crate_index//:futures",
     "@crate_index//:prometheus-parse",
     "@crate_index//:proptest",
     "@crate_index//:tempfile",
