--- a/rs/nns/governance/BUILD.bazel
+++ b/rs/nns/governance/BUILD.bazel
@@ -35,10 +35,8 @@ BASE_DEPENDENCIES = [
     "//rs/registry/canister",
     "//rs/rosetta-api/icp_ledger",
     "//rs/rosetta-api/ledger_core",
-    "//rs/rust_canisters/dfn_candid",
-    "//rs/rust_canisters/dfn_core",
     "//rs/rust_canisters/dfn_http_metrics",
-    "//rs/rust_canisters/dfn_protobuf",
+    "//rs/rust_canisters/http_types",
     "//rs/rust_canisters/on_wire",
     "//rs/sns/root",
     "//rs/types/base_types",
@@ -50,6 +48,7 @@ BASE_DEPENDENCIES = [
     "@crate_index//:candid",
     "@crate_index//:comparable",
     "@crate_index//:dyn-clone",
+    "@crate_index//:ic-cdk",
     "@crate_index//:ic-metrics-encoder",
     "@crate_index//:ic-stable-structures",
     "@crate_index//:itertools",
@@ -100,6 +99,7 @@ MACRO_DEPENDENCIES = [
     # Keep sorted.
     "//rs/nervous_system/common/build_metadata",
     "@crate_index//:async-trait",
+    "@crate_index//:ic-cdk-macros",
     "@crate_index//:rust_decimal_macros",
     "@crate_index//:strum_macros",
 ]
@@ -185,7 +185,6 @@ rust_library(
     version = "0.9.0",
     deps = DEPENDENCIES + [
         "@crate_index//:canbench-rs",
-        "@crate_index//:ic-cdk",
     ],
 )
 
