Previously, I tried to add "/*.rs" to BUILD globs, but I made those changes to the wrong BUILD file. This corrects that. More precisely, it backs out changes to token_valuation/BUILD.bazel, and instead makes analogous to initial_supply/BUILD.

--- a/rs/nervous_system/initial_supply/BUILD.bazel
+++ b/rs/nervous_system/initial_supply/BUILD.bazel
@@ -23,7 +23,7 @@ DEV_DEPENDENCIES = [
 ]
 
 LIB_SRCS = glob(
-    ["src/**"],
+    ["src/**/*.rs"],
     exclude = ["src/**/*tests.rs"],
 )
 
@@ -38,7 +38,7 @@ rust_library(
 
 rust_test(
     name = "initial_supply_test",
-    srcs = glob(["src/**"]),
+    srcs = glob(["src/**/*.rs"]),
     proc_macro_deps = PROC_MACRO_DEPENDENCIES,
     deps = DEV_DEPENDENCIES + DEPENDENCIES,
 )
