--- a/rs/sns/governance/token_valuation/BUILD.bazel
+++ b/rs/sns/governance/token_valuation/BUILD.bazel
@@ -35,10 +35,10 @@ MACRO_DEV_DEPENDENCIES = [
 ]
 
 LIB_SRCS = glob(
-    ["src/**/*.rs"],
+    ["src/**"],
     # Ensures that we do not need to rebuild just because a _test.rs file
     # changed.
-    exclude = ["**/*tests*/**"],
+    exclude = ["**/*tests.rs"],
 )
 
 rust_library(
@@ -52,7 +52,7 @@ rust_library(
 
 rust_test(
     name = "token_valuation_test",
-    srcs = glob(["src/**/*.rs"]),
+    srcs = glob(["src/**"]),
     proc_macro_deps = MACRO_DEPENDENCIES + MACRO_DEV_DEPENDENCIES,
     deps = DEPENDENCIES + DEV_DEPENDENCIES,
 )
