More aggressively filter out test files in LIB_SRCS.

--- a/rs/nervous_system/initial_supply/BUILD.bazel
+++ b/rs/nervous_system/initial_supply/BUILD.bazel
@@ -24,7 +24,7 @@ DEV_DEPENDENCIES = [
 
 LIB_SRCS = glob(
     ["src/**/*.rs"],
-    exclude = ["src/**/*tests.rs"],
+    exclude = ["src/**/*tests*"],
 )
 
 rust_library(
