fix(IDX): Avoid formatting untracked shell files
Before this, our `shfmt` wrapper used `find` to find all files ending in
`.sh`. Now, the wrapper uses `git ls-files` to ensure that only
git-tracked files are processed. This avoids issues when shell files
exist in gitignored directories (like `.cargo`, `target`, etc).

The `shfmt` wrapper is also deduplicated so that both the formatting
target and the check target use the same file/options. Finally the check
target is renamed from `shfmt-lint` to `shfmt-check` to better reflect
what it does (it doesn't exactly lint the shell code like e.g. `shellcheck`
would).

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -409,7 +409,7 @@ load("//bazel:trivy.bzl", "trivy_scan")
 
 trivy_scan(name = "trivy")
 
-# shfmt binary for fast shell linting
+# shfmt binary for fast shell formatting
 load("//bazel:shfmt.bzl", "shfmt")
 
 shfmt(name = "shfmt")
