fix search transaction endpoint

--- a/rs/rosetta-api/BUILD.bazel
+++ b/rs/rosetta-api/BUILD.bazel
@@ -33,7 +33,9 @@ DEPENDENCIES = [
     "//rs/types/types",
     "@crate_index//:actix-rt",
     "@crate_index//:actix-web",
+    "@crate_index//:rusqlite",
     "@crate_index//:anyhow",
+    "@crate_index//:serde_bytes",
     "@crate_index//:base64",
     "@crate_index//:candid",
     "@crate_index//:clap_3_2_25",
