Add pocketic support to ic-nervous-system-agent

--- a/rs/nervous_system/agent/Cargo.toml
+++ b/rs/nervous_system/agent/Cargo.toml
@@ -16,6 +16,7 @@ ic-nervous-system-clients = { path = "../clients" }
 ic-nns-constants = { path = "../../nns/constants" }
 ic-sns-wasm = { path = "../../nns/sns-wasm" }
 ic-sns-governance = { path = "../../sns/governance" }
+pocket-ic = { path = "../../../packages/pocket-ic" }
 serde = { workspace = true }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
