test(ICRC_ledger): FI-1492: Set subnet configs in golden state tests to cover all canister IDs (#1530)
Expand the canister ID ranges for the `StateMachine` app subnet in the
golden state tests for the NNS, SNS, and fiduciary subnets to cover all
possible canister IDs. This is to avoid scenarios where the tests may
fail in case there are some messages to canisters on other subnets that
cannot be routed.

--- a/rs/nns/test_utils/golden_nns_state/BUILD.bazel
+++ b/rs/nns/test_utils/golden_nns_state/BUILD.bazel
@@ -1,10 +1,11 @@
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
 
 package(default_visibility = ["//visibility:public"])
 
 DEPENDENCIES = [
     # Keep sorted.
     "//rs/config",
+    "//rs/registry/routing_table",
     "//rs/registry/subnet_type",
     "//rs/state_machine_tests",
     "//rs/types/base_types",
@@ -37,5 +38,11 @@ rust_library(
     srcs = glob(["src/**/*.rs"]),
     crate_name = "ic_nns_test_utils_golden_nns_state",
     version = "0.0.1",
+    deps = DEPENDENCIES,
+)
+
+rust_test(
+    name = "golden_nns_state_test",
+    crate = ":golden_nns_state",
     deps = DEPENDENCIES,
 )
