feat(sns): Use inflation in valuation of SNS tokens. (#1519)
This builds upon #1494 . See the "Future Work/Motivation" section in
that PR's description.

--- a/rs/sns/governance/token_valuation/BUILD.bazel
+++ b/rs/sns/governance/token_valuation/BUILD.bazel
@@ -6,8 +6,8 @@ DEPENDENCIES = [
     # Keep sorted.
     "//packages/icrc-ledger-types:icrc_ledger_types",
     "//rs/nervous_system/common",
+    "//rs/nervous_system/initial_supply",
     "//rs/nervous_system/runtime",
-    "//rs/nervous_system/string",
     "//rs/nns/cmc",
     "//rs/nns/constants",
     "//rs/sns/swap/proto_library",
@@ -16,6 +16,7 @@ DEPENDENCIES = [
     "@crate_index//:futures",
     "@crate_index//:ic-cdk",
     "@crate_index//:mockall",
+    "@crate_index//:num-traits",
     "@crate_index//:rust_decimal",
 ]
 
