--- a/rs/async_utils/BUILD.bazel
+++ b/rs/async_utils/BUILD.bazel
@@ -16,7 +16,7 @@ rust_library(
         "@crate_index//:bytes",
         "@crate_index//:futures",
         "@crate_index//:futures-util",
-        "@crate_index//:hyper_0_14_27",
+        "@crate_index//:hyper",
         "@crate_index//:slog",
         "@crate_index//:sync_wrapper",
         "@crate_index//:thiserror",
