--- a/rs/messaging/BUILD.bazel
+++ b/rs/messaging/BUILD.bazel
@@ -85,21 +85,25 @@ rust_ic_test_suite(
     srcs = glob(["tests/**/*.rs"]),
     data = [
         "//rs/rust_canisters/downstream_calls_test:downstream-calls-test-canister",
+        "//rs/rust_canisters/random_traffic_test:random-traffic-test-canister",
         "//rs/rust_canisters/xnet_test:xnet-test-canister",
     ],
     env = {
         "DOWNSTREAM_CALLS_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/downstream_calls_test:downstream-calls-test-canister)",
+        "RANDOM_TRAFFIC_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/random_traffic_test:random-traffic-test-canister)",
         "XNET_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/xnet_test:xnet-test-canister)",
     },
     deps = [
         # Keep sorted.
         ":messaging",
+        "//rs/config",
         "//rs/interfaces/certified_stream_store",
         "//rs/registry/routing_table",
         "//rs/registry/subnet_type",
         "//rs/replicated_state",
         "//rs/rust_canisters/canister_test",
         "//rs/rust_canisters/downstream_calls_test",
+        "//rs/rust_canisters/random_traffic_test",
         "//rs/rust_canisters/xnet_test",
         "//rs/state_machine_tests",
         "//rs/test_utilities",
@@ -111,6 +115,7 @@ rust_ic_test_suite(
         "@crate_index//:assert_matches",
         "@crate_index//:candid",
         "@crate_index//:maplit",
+        "@crate_index//:proptest",
         "@crate_index//:serde",
     ],
 )
