--- a/rs/tests/driver/BUILD.bazel
+++ b/rs/tests/driver/BUILD.bazel
@@ -65,6 +65,7 @@ rust_library(
         "//rs/nns/handlers/root/impl:root",
         "//rs/nns/init",
         "//rs/nns/sns-wasm",
+        "//rs/nns/sns-wasm/api",
         "//rs/nns/test_utils",
         "//rs/phantom_newtype",
         "//rs/prep",
