--- a/rs/nervous_system/agent/BUILD.bazel
+++ b/rs/nervous_system/agent/BUILD.bazel
@@ -6,7 +6,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//rs/nervous_system/clients",
     "//rs/nns/constants",
-    "//rs/nns/sns-wasm",
+    "//rs/nns/sns-wasm/api",
     "//rs/sns/governance",
     "//rs/types/base_types",
     "@crate_index//:anyhow",
