--- a/rs/sns/cli/BUILD.bazel
+++ b/rs/sns/cli/BUILD.bazel
@@ -13,6 +13,7 @@ BASE_DEPENDENCIES = [
     "//rs/nervous_system/proto",
     "//rs/nns/common",
     "//rs/nns/constants",
+    "//rs/nns/sns-wasm/api",
     "//rs/sns/root",
     "//rs/types/base_types",
     "@crate_index//:anyhow",
