--- a/.github/workflows-source/ci-pr-only.yml
+++ b/.github/workflows-source/ci-pr-only.yml
@@ -25,6 +25,7 @@ anchors:
     timeout-minutes: 30
     runs-on:
       labels: dind-small
+      group: ch1-debug
     container:
       <<: *image
       options: >-
