feat(PocketIC): library support for getting subnet metrics

--- a/packages/pocket-ic/Cargo.toml
+++ b/packages/pocket-ic/Cargo.toml
@@ -23,11 +23,13 @@ edition.workspace = true
 base64 = "^0.13.1"
 candid = "^0.10.2"
 hex = { workspace = true }
+ic-agent = { workspace = true }
 ic-cdk = "0.13.5"
 reqwest = { workspace = true }
 schemars = "0.8.16"
 serde = { workspace = true }
 serde_bytes = { workspace = true }
+serde_cbor = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
 slog = { workspace = true }
