feat(PocketIC): bitcoin integration (#1491)
This PR implements bitcoin integration in PocketIC.

--- a/rs/state_machine_tests/Cargo.toml
+++ b/rs/state_machine_tests/Cargo.toml
@@ -14,6 +14,8 @@ ciborium = { workspace = true }
 clap = { version = "3.2.25", features = ["derive"] }
 hex = { workspace = true }
 ic-artifact-pool = { path = "../artifact_pool" }
+ic-btc-adapter-client = { path = "../bitcoin/client" }
+ic-btc-consensus = { path = "../bitcoin/consensus" }
 ic-config = { path = "../config" }
 ic-consensus = { path = "../consensus" }
 ic-consensus-utils = { path = "../consensus/utils" }
