--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -970,3 +970,10 @@ filegroup(
         "https://bitcoincore.org/bin/bitcoin-core-27.0/bitcoin-27.0-x86_64-linux-gnu.tar.gz",
     ],
 )
+
+http_file(
+    name = "bitcoin_example_canister",
+    downloaded_file_path = "basic_bitcoin.wasm.gz",
+    sha256 = "2a428e8d35518ce22002e498f7d618a9eeeddf57371f965e92cf480dd3cbd046",
+    url = "https://github.com/dfinity/examples/releases/download/rust-basic-bitcoin-24-09-16/basic_bitcoin.wasm.gz",
+)
