--- a/rs/bitcoin/client/BUILD.bazel
+++ b/rs/bitcoin/client/BUILD.bazel
@@ -4,6 +4,7 @@ package(default_visibility = [
     "//rs/bitcoin:__subpackages__",
     "//rs/p2p:__subpackages__",
     "//rs/replica:__subpackages__",
+    "//rs/state_machine_tests:__subpackages__",
 ])
 
 rust_library(
