--- a/rs/state_machine_tests/BUILD.bazel
+++ b/rs/state_machine_tests/BUILD.bazel
@@ -6,6 +6,8 @@ package(default_visibility = ["//visibility:public"])
 DEPENDENCIES = [
     # Keep sorted.
     "//rs/artifact_pool",
+    "//rs/bitcoin/client",
+    "//rs/bitcoin/consensus",
     "//rs/config",
     "//rs/consensus",
     "//rs/consensus/utils",
