--- a/Cargo.toml
+++ b/Cargo.toml
@@ -469,6 +469,8 @@ axum = "0.7.5"
 backoff = "0.4"
 base64 = { version = "0.13.1" }
 bincode = "1.3.3"
+bitcoind = "0.36.0"
+bitcoincore-rpc = { workspace = true }
 # build-info and build-info-build MUST be kept in sync!
 build-info = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7" }
 build-info-build = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7", default-features = false }
