--- a/rs/bitcoin/adapter/BUILD.bazel
+++ b/rs/bitcoin/adapter/BUILD.bazel
@@ -8,7 +8,6 @@ DEPENDENCIES = [
     "//rs/async_utils",
     "//rs/bitcoin/service",
     "//rs/config",
-    "//rs/monitoring/adapter_metrics/server",
     "//rs/monitoring/logger",
     "//rs/monitoring/metrics",
     "@crate_index//:bitcoin",
@@ -70,7 +69,7 @@ rust_binary(
     aliases = ALIASES,
     proc_macro_deps = MACRO_DEPENDENCIES,
     visibility = ["//rs:release-pkg"],
-    deps = DEPENDENCIES + [":adapter"],
+    deps = DEPENDENCIES + [":adapter",     "//rs/monitoring/adapter_metrics/server"],
 )
 
 rust_binary(
@@ -78,7 +77,7 @@ rust_binary(
     srcs = ["src/stress_test.rs"],
     aliases = ALIASES,
     proc_macro_deps = MACRO_DEPENDENCIES,
-    deps = DEPENDENCIES + [":adapter"],
+    deps = DEPENDENCIES + [":adapter",     "//rs/monitoring/adapter_metrics/server"],
 )
 
 rust_test(
