--- a/rs/bitcoin/client/Cargo.toml
+++ b/rs/bitcoin/client/Cargo.toml
@@ -7,6 +7,7 @@ description.workspace = true
 documentation.workspace = true
 
 [dependencies]
+hyper-util = { workspace = true }
 ic-adapter-metrics-client = { path = "../../monitoring/adapter_metrics/client" }
 ic-async-utils = { path = "../../async_utils" }
 ic-btc-replica-types = { path = "../replica_types" }
