--- a/rs/https_outcalls/client/Cargo.toml
+++ b/rs/https_outcalls/client/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 candid = { workspace = true }
 futures = { workspace = true }
+hyper-util = { workspace = true }
 ic-adapter-metrics-client = { path = "../../monitoring/adapter_metrics/client" }
 ic-async-utils = { path = "../../async_utils" }
 ic-config = { path = "../../config" }
