--- a/rs/monitoring/adapter_metrics/client/BUILD.bazel
+++ b/rs/monitoring/adapter_metrics/client/BUILD.bazel
@@ -7,6 +7,7 @@ DEPENDENCIES = [
     "//rs/async_utils",
     "//rs/monitoring/adapter_metrics/service",
     "//rs/monitoring/logger",
+    "@crate_index//:hyper-util",
     "@crate_index//:prometheus",
     "@crate_index//:protobuf",
     "@crate_index//:slog",
