--- a/rs/monitoring/adapter_metrics/client/Cargo.toml
+++ b/rs/monitoring/adapter_metrics/client/Cargo.toml
@@ -7,6 +7,7 @@ description.workspace = true
 documentation.workspace = true
 
 [dependencies]
+hyper-util = { workspace = true }
 ic-adapter-metrics-service = { path = "../service" }
 ic-async-utils = { path = "../../../async_utils" }
 prometheus = { workspace = true }
