--- a/rs/bitcoin/adapter/Cargo.toml
+++ b/rs/bitcoin/adapter/Cargo.toml
@@ -13,6 +13,7 @@ futures = { workspace = true }
 hashlink = "0.8.0"
 hex = { workspace = true }
 http = { workspace = true }
+hyper-util = { workspace = true }
 ic-adapter-metrics-server = { path = "../../monitoring/adapter_metrics/server" }
 ic-async-utils = { path = "../../async_utils" }
 ic-btc-service = { path = "../service" }
