--- a/.github/workflows/slack-workflow-run.yml
+++ b/.github/workflows/slack-workflow-run.yml
@@ -9,6 +9,8 @@ on:
       - rc--*
     workflows:
       - Schedule Daily
+      - Schedule RC
+      - Schedule Rust Benchmarks
       - Schedule Weekly
       - Release Testing
       - Container IC Base Images
