XC-197: batch upgrade

--- a/rs/cross-chain/proposal-cli/Cargo.toml
+++ b/rs/cross-chain/proposal-cli/Cargo.toml
@@ -11,6 +11,7 @@ askama = { workspace = true }
 candid = { workspace = true }
 candid_parser = { workspace = true }
 clap = { workspace = true }
+futures = { workspace = true }
 hex = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
