--- a/rs/pocket_ic_server/BUILD.bazel
+++ b/rs/pocket_ic_server/BUILD.bazel
@@ -97,6 +97,7 @@ TEST_DEPENDENCIES = [
     "@crate_index//:hex",
     "@crate_index//:ic-agent",
     "@crate_index//:ic-btc-interface",
+    "@crate_index//:ic-cdk",
     "@crate_index//:ic-utils",
     "@crate_index//:rcgen",
     "@crate_index//:reqwest",
