--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -64,6 +64,20 @@ load("@focal//:packages.bzl", "focal_packages")
 
 focal_packages()
 
+# Packageset based on an Ubuntu noble snapshot, see manifest file
+# for details
+# To update, comment out the `lock` field below and run:
+#   bazel run @noble//:lock
+deb_index(
+    name = "noble",
+    lock = "//bazel:noble.lock.json",
+    manifest = "//bazel:noble.yaml",
+)
+
+load("@noble//:packages.bzl", "noble_packages")
+
+noble_packages()
+
 # OCI (docker, podman) container support
 http_archive(
     name = "rules_oci",
@@ -137,6 +151,13 @@ oci_pull(
 oci_pull(
     name = "ubuntu_base",
     image = "docker.io/library/ubuntu@sha256:965fbcae990b0467ed5657caceaec165018ef44a4d2d46c7cdea80a9dff0d1ea",
+    platforms = ["linux/amd64"],
+)
+
+# used in various places as base
+oci_pull(
+    name = "ubuntu_base",
+    image = "docker.io/library/ubuntu@sha256:77d57fd89366f7d16615794a5b53e124d742404e20f035c22032233f1826bd6a",
     platforms = ["linux/amd64"],
 )
 
