--- a/ic-os/components/boundary-guestos/etc/systemd/system/ic-boundary.service
+++ b/ic-os/components/boundary-guestos/etc/systemd/system/ic-boundary.service
@@ -17,18 +17,15 @@ ExecStart=/bin/bash -c ' \
         --local-store-path /var/opt/registry/store \
         --nns-pub-key-pem /run/ic-node/etc/default/nns_public_key.pem \
         --nns-urls "${NNS_URL}" \
-        --http-unix-socket /run/ic-node/ic-boundary.socket \
+        --http-port 9000 \
         --metrics-addr "[::]:9324" \
         --log-stdout \
         --log-failed-requests-only \
         --nftables-system-replicas-path /run/ic-node/etc/nftables/system_replicas.ruleset \
-        --geoip-db /run/ic-node/etc/ic-boundary/GeoLite2-Country.mmdb \
         --disable-latency-routing \
         --retry-update-call \
         --rate-limit-per-second-per-subnet "1000" \
         --http-client-count "8" \
-        ${MAX_CONCURRENCY:+ --max-concurrency "${MAX_CONCURRENCY}"} \
-        ${SHED_EWMA_PARAM:+ --shed-ewma-param "${SHED_EWMA_PARAM}"} \
         ${CACHE_SIZE:+ --cache-size-bytes "${CACHE_SIZE}"} \
         ${CACHE_ITEM_MAX_SIZE:+ --cache-max-item-size-bytes "${CACHE_ITEM_MAX_SIZE}"} \
         ${CACHE_TTL:+ --cache-ttl-seconds "${CACHE_TTL}"} \
