Revert "feat(BOUN-1169): Replace nginx/icx-proxy/certsyncer with ic-gateway [RUN_ALL_BAZEL_TARGETS] (#342)"
This reverts commit 8ed97f18bad8bf93ff98fc266e26ab503b44f00c.

--- a/ic-os/components/boundary-guestos/etc/systemd/system/vector.service
+++ b/ic-os/components/boundary-guestos/etc/systemd/system/vector.service
@@ -3,6 +3,7 @@ Description=Vector
 After=network-online.target
 Wants=network-online.target
 After=setup-vector.service
+Before=nginx.service
 BindsTo=setup-vector.service
 
 [Service]
